fix: overflow x hidden

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,3 +1,7 @@
+html {
+  @apply overflow-x-hidden;
+}
+
 /* Typography */
 .transform-fade-down-enter-active,
 .transform-fade-down-leave-active {
